fix caption spacing centered image

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -76,7 +76,6 @@
     &--light {
       background: transparent;
       justify-content: center;
-      text-align: center;
     }
 
     & + hr {
